--- a/pirate.html
+++ b/pirate.html
@@ -1,7 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Convert Normal Speech to Pirate Speech!</title>
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <title>CryptoCakes: Pirate Speech Converter</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 		<style type="text/css">
 			textarea
 			{
@@ -31,11 +37,38 @@
 				});
 			});
 		</script>
-	</head>
-	<body>
-		<h2>Landlubbers</h2>
-		<textarea id="normal"></textarea>
-		<h2>Pirates</h2>
-		<textarea id="pirate"></textarea>
-	</body>
+  </head>
+  <body>
+    <div id="header">
+      <div class="container">
+        <a id="header-title"href="index.html">My Blog: CryptoCakes</a>
+        <ul id="header-nav">
+          <li><a href="about.html">About</a></li>
+          <li><a href="mailto:blokkyblok@gmail.com">Contact (Email)</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="content">
+      <div class="container">
+        <h2>Landlubbers</h2>
+	<textarea id="normal"></textarea>
+	<h2>Pirates</h2>
+	<textarea id="pirate"></textarea>
+      </div> <!-- container -->
+    </div> <!-- content -->
+    <div id="footer">
+      <div class="container">
+        <div class="column">
+          <h4>My Links</h4>
+          <p>
+            <a href="https://www.sololearn.com/Profile/18013333">SoloLearn</a>
+          </p>
+        </div>
+        <div class="column">
+          <h4>My Story</h4>
+          <p>Hi there! I'm a secondary student who loves programming in her spare time.</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
