--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="container">
         <a id="header-title" href="index.html">My Blog: CryptoCakes</a>
         <ul id="header-nav">
+          <li><a href="pirate.html">Pirate Speech Converter</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="mailto:blokkyblok@gmail.com">Contact (Email)</a></li>
         </ul>
