--- a/pirate.html
+++ b/pirate.html
@@ -46,7 +46,7 @@
         <ul id="header-nav">
 					<li><a href="pirate.html">Pirate Speech Converter</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="mailto:blokkyblok@gmail.com">Contact (Email)</a></li>
+          <li><a href="#">Contact (Email)</a></li>
         </ul>
       </div>
     </div>
