--- a/links/index.html
+++ b/links/index.html
@@ -19,12 +19,12 @@
     <h2>Featured</h2>
     <a class="featured" href="https://cooklybookly.com/adannaya13542">My Recipes | CooklyBookly</a>
 
-    <!-- Popular Content -->
-    <h2>Popular Content</h2>
+    <!-- Recent Posts -->
+    <h2>Recent Posts</h2>
 
-    <a href="">Link 1</a>
-    <a href="">Link 2</a>
-    <a href="">Link 3</a>
+    <a href="https://cooklybookly.com/recipes/23c2606c-2ff9-11eb-b64c-07ed6f476107">Swiss Roll</a>
+    <!--<a href="">Link 2</a>
+    <a href="">Link 3</a>-->
 
     <!-- Channels -->
     <h2>Follow Me On</h2>
