--- a/links/index.html
+++ b/links/index.html
@@ -29,8 +29,8 @@
     <h2>Follow Me On</h2>
 
     <div class="channels">
-        <a href="">Instagram</a>
-        <a href="">Twitter</a>
+        <a href="https://www.instagram.com/adannaya13542/">Instagram</a>
+        <a href="https://twitter.com/Adannaya13542">Twitter</a>
     </div>
 
 </body>
