--- a/pirate.html
+++ b/pirate.html
@@ -44,9 +44,9 @@
       <div class="container">
         <a id="header-title"href="index.html">My Blog: CryptoCakes</a>
         <ul id="header-nav">
-					<li><a href="pirate.html">Pirate Speech Converter</a></li>
+	  <li><a href="pirate.html">Pirate Speech Converter</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Contact (Email)</a></li>
+          <li><a href="contact.html">Contact (Email)</a></li>
         </ul>
       </div>
     </div>
