--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul id="header-nav">
           <li><a href="pirate.html">Pirate Speech Converter</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Contact (Email)</a></li>
+          <li><a href="contact.html">Contact (Email)</a></li>
         </ul>
       </div>
     </div>
