--- a/contact.html
+++ b/contact.html
@@ -23,17 +23,9 @@
     </div>
     <div id="content">
       <div class="container">
-        <div class="about">
-          <div class="about-author">
-            <img src="fox_icon.jpg">
-          </div>
-          <h1 class="about-title">About Me</h1>
-          <div class="about-content">
-            <p>Hi there! I'm a secondary student who loves programming in her spare time.</p>
-            <p>Ever since I was small, I've loved computers, and I even created this blog myself with my computing skills! It's built in HTML (<strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage) - the words - and CSS (<strong>C</strong>ascading <strong>S</strong>tyle <strong>S</strong>heets) - the colours.</p>
-            <p>If you like my blog, please follow me on SoloLearn and tell your friends and family about it. If you want to get in touch, please click on the contact link in the navigation bar.</p>
-          </div> <!-- about-content -->
-        </div> <!-- about -->
+        <iframe height="502" title="Embedded Wufoo Form" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://adannaya.wufoo.com/embed/zzogyd11pkrlgp/">
+          <a href="https://adannaya.wufoo.com/forms/zzogyd11pkrlgp/">Fill out my Wufoo form!</a>
+        </iframe>
       </div> <!-- container -->
     </div> <!-- content -->
     <div id="footer">
